--- a/Example/PPAssetsActionController/Info.plist
+++ b/Example/PPAssetsActionController/Info.plist
@@ -22,6 +22,12 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>I want to see you.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>I want to hear you.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>I want to know what you've been up to.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -33,7 +39,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
 	</array>
 </dict>
 </plist>
