--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,9 @@ env:
     - DEST_IOS9="name=iPhone 6,OS=9.3"
     - DEST_IOS8="name=iPhone 6,OS=8.4"
   matrix:
-    - DESTINATION="$DEST_IOS10" RUN_TESTS="YES" SEND_COVERAGE="YES" POD_LINT="YES" CARTHAGE="NO"  SPM="NO"
-    - DESTINATION="$DEST_IOS9"  RUN_TESTS="NO"  SEND_COVERAGE="NO"  POD_LINT="NO"  CARTHAGE="YES" SPM="NO"
-    - DESTINATION="$DEST_IOS8"  RUN_TESTS="NO"  SEND_COVERAGE="NO"  POD_LINT="NO"  CARTHAGE="NO"  SPM="YES"
+    - DESTINATION="$DEST_IOS10" RUN_TESTS="YES" SEND_COVERAGE="YES" POD_LINT="YES" CARTHAGE="NO"
+    - DESTINATION="$DEST_IOS9"  RUN_TESTS="NO"  SEND_COVERAGE="NO"  POD_LINT="NO"  CARTHAGE="YES"
+    - DESTINATION="$DEST_IOS8"  RUN_TESTS="NO"  SEND_COVERAGE="NO"  POD_LINT="NO"  CARTHAGE="NO"
 
 script:
   - set -o pipefail
@@ -44,10 +44,6 @@ script:
 
   - if [ $CARTHAGE == "YES" ]; then
       carthage build --no-skip-current;
-    fi
-
-  - if [ $SPM == "YES" ]; then
-      swift build;
     fi
 
 after_success:
