--- a/.travis.yml
+++ b/.travis.yml
@@ -26,13 +26,15 @@ env:
     - SCHEME="PPAssetsActionController-Example"
     - SCHEME_RUS="PPAssetsActionController_Example_Rus"
     - SDK_IOS=iphonesimulator10.0
+    - DEST_IPAD="name=iPad Air 2,OS=10.0"
     - DEST_IOS10="name=iPhone 6,OS=10.0"
     - DEST_IOS9="name=iPhone 6,OS=9.3"
     - DEST_IOS8="name=iPhone 6,OS=8.4"
   matrix:
     - DESTINATION="$DEST_IOS10" RUN_TESTS="YES" SEND_COVERAGE="YES" POD_LINT="YES" CARTHAGE="NO"
-    - DESTINATION="$DEST_IOS9"  RUN_TESTS="NO"  SEND_COVERAGE="NO"  POD_LINT="NO"  CARTHAGE="YES"
+    - DESTINATION="$DEST_IOS9"  RUN_TESTS="YES" SEND_COVERAGE="NO"  POD_LINT="NO"  CARTHAGE="YES"
     - DESTINATION="$DEST_IOS8"  RUN_TESTS="NO"  SEND_COVERAGE="NO"  POD_LINT="NO"  CARTHAGE="NO"
+    - DESTINATION="$DEST_IPAD"  RUN_TESTS="YES" SEND_COVERAGE="NO"  POD_LINT="NO"  CARTHAGE="NO"
 
 script:
   - set -o pipefail
