Fix could not find compatible pod error

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ podfile: ./Example/Podfile
 before_install:
   - rvm install "ruby-2.3.0"
   - bundle
-  - pod repo update --silent
-  - pod install --project-directory=Example
+  - pod install --repo-update --project-directory=Example
 
 notifications:
   email: false
