Update version and fix linting step

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ script:
     fi
 
   - if [ $POD_LINT == "YES" ]; then
-      pod lib lint;
+      pod lib lint --swift-version=4.0;
     fi
 
   - if [ $CARTHAGE == "YES" ]; then
